@@ -17,6 +17,8 @@ package org.ballerinalang.langserver.codeaction;
 
 import io.ballerina.compiler.api.ModuleID;
 import io.ballerina.compiler.api.SemanticModel;
+import io.ballerina.compiler.api.TypeBuilder;
+import io.ballerina.compiler.api.Types;
 import io.ballerina.compiler.api.symbols.ArrayTypeSymbol;
 import io.ballerina.compiler.api.symbols.FunctionSymbol;
 import io.ballerina.compiler.api.symbols.MapTypeSymbol;
@@ -53,10 +55,12 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.ballerinalang.langserver.common.ImportsAcceptor;
+import org.ballerinalang.langserver.common.constants.CommandConstants;
 import org.ballerinalang.langserver.common.utils.CommonUtil;
 import org.ballerinalang.langserver.common.utils.FunctionGenerator;
 import org.ballerinalang.langserver.common.utils.PositionUtil;
 import org.ballerinalang.langserver.commons.CodeActionContext;
+import org.ballerinalang.langserver.commons.capability.LSClientCapabilities;
 import org.ballerinalang.langserver.commons.codeaction.CodeActionData;
 import org.ballerinalang.langserver.commons.codeaction.ResolvableCodeAction;
 import org.ballerinalang.langserver.commons.codeaction.spi.DiagBasedPositionDetails;
@@ -74,9 +78,11 @@ import org.eclipse.lsp4j.jsonrpc.messages.Either;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.function.Predicate;
@@ -187,17 +193,41 @@ public class CodeActionUtil {
      */
     public static List<String> getPossibleTypes(TypeSymbol typeDescriptor, CodeActionContext context,
                                                 ImportsAcceptor importsAcceptor) {
+        return new ArrayList<>(getPossibleTypeSymbols(typeDescriptor, context, importsAcceptor).values());
+    }
+
+    public static Map<TypeSymbol, String> getPossibleTypeSymbols(TypeSymbol typeDescriptor,
+                                                                 List<TextEdit> importEdits,
+                                                                 CodeActionContext context) {
+        ImportsAcceptor importsAcceptor = new ImportsAcceptor(context);
+        Map<TypeSymbol, String> possibleTypes = getPossibleTypeSymbols(typeDescriptor, context, importsAcceptor);
+        importEdits.addAll(importsAcceptor.getNewImportTextEdits());
+        return possibleTypes;
+    }
+
+    public static Map<TypeSymbol, String> getPossibleTypeSymbols(TypeSymbol typeDescriptor, CodeActionContext context,
+                                                                 ImportsAcceptor importsAcceptor) {
+        Optional<SemanticModel> semanticModel = context.currentSemanticModel();
+        if (semanticModel.isEmpty()) {
+            return Collections.emptyMap();
+        }
         if (typeDescriptor.getName().isPresent() && typeDescriptor.getName().get().startsWith("$")) {
             typeDescriptor = CommonUtil.getRawType(typeDescriptor);
         }
 
-        List<String> types = new ArrayList<>();
+        Map<TypeSymbol, String> typesMap = new HashMap<>();
+        Types types = semanticModel.get().types();
+        TypeBuilder typeBuilder = types.builder();
         if (typeDescriptor.typeKind() == TypeDescKind.RECORD) {
             // Handle ambiguous mapping construct types {}
 
-            // Matching Record type
-            for (Symbol symbol : context.visibleSymbols(context.cursorPosition())) {
-                if (symbol instanceof TypeDefinitionSymbol &&
+            Position cursorPosition = new Position(context.range().getStart().getLine(),
+                    context.range().getStart().getCharacter());
+            List<Symbol> visibleSymbols = context.visibleSymbols(cursorPosition);
+
+            //Record type definitions - Find matching Record type definitions
+            for (Symbol symbol : visibleSymbols) {
+                if (symbol.kind() == SymbolKind.TYPE_DEFINITION &&
                         ((TypeDefinitionSymbol) symbol).typeDescriptor().typeKind() == TypeDescKind.RECORD &&
                         typeDescriptor.subtypeOf(((TypeDefinitionSymbol) symbol).typeDescriptor())) {
                     Optional<ModuleSymbol> module = symbol.getModule();
@@ -207,112 +237,82 @@ public class CodeActionUtil {
                         fqPrefix = id.orgName() + "/" + id.moduleName() + ":" + id.version() + ":";
                     }
                     String moduleQualifiedName = fqPrefix + symbol.getName().get();
-                    types.add(FunctionGenerator.processModuleIDsInText(importsAcceptor, moduleQualifiedName, context));
+                    typesMap.put(((TypeDefinitionSymbol) symbol).typeDescriptor(),
+                            FunctionGenerator.processModuleIDsInText(importsAcceptor, moduleQualifiedName, context));
                 }
             }
 
+            RecordTypeSymbol recordTypeSymbol = (RecordTypeSymbol) typeDescriptor;
             // Anon Record
             String rType = FunctionGenerator.generateTypeSignature(importsAcceptor, typeDescriptor, context);
-            RecordTypeSymbol recordLiteral = (RecordTypeSymbol) typeDescriptor;
-            types.add((recordLiteral.fieldDescriptors().size() > 0) ? rType : "record {}");
-
-            // A record can be an open record or a closed record:
-            //      record {| int field1; anydata...; |}
-            //      record {| int field1; |}
-            RecordTypeSymbol recordTypeSymbol = (RecordTypeSymbol) typeDescriptor;
+            typesMap.put(recordTypeSymbol, (recordTypeSymbol.fieldDescriptors().size() > 0) ? rType : "record {}");
 
             // JSON - Record fields and rest type descriptor should be json subtypes
             boolean jsonSubType = recordTypeSymbol.fieldDescriptors().values().stream()
                     .allMatch(recordFieldSymbol -> isJsonMemberType(recordFieldSymbol.typeDescriptor())) &&
                     recordTypeSymbol.restTypeDescriptor().map(CodeActionUtil::isJsonMemberType).orElse(true);
             if (jsonSubType) {
-                types.add("json");
+                typesMap.put(types.JSON, types.JSON.signature());
             }
 
             // Map
-            TypeSymbol prevType = null;
-            boolean isConstrainedMap = true;
-            for (RecordFieldSymbol recordField : recordLiteral.fieldDescriptors().values()) {
-                TypeDescKind typeDescKind = recordField.typeDescriptor().typeKind();
-                if (prevType != null && typeDescKind != prevType.typeKind()) {
-                    isConstrainedMap = false;
-                }
-                prevType = recordField.typeDescriptor();
+            Optional<TypeSymbol> firstFieldType =
+                    recordTypeSymbol.fieldDescriptors().values().stream().findFirst()
+                            .map(RecordFieldSymbol::typeDescriptor);
+            boolean isConstrainedMap = firstFieldType
+                    .map(fieldType -> recordTypeSymbol.fieldDescriptors().values().stream()
+                            .map(RecordFieldSymbol::typeDescriptor).allMatch(type ->
+                                    type.subtypeOf(fieldType) || fieldType.subtypeOf(type))).orElse(false);
+            if (isConstrainedMap) {
+                String type = FunctionGenerator.generateTypeSignature(importsAcceptor, firstFieldType.get(), context);
+                typesMap.put(typeBuilder.MAP_TYPE
+                        .withTypeParam(firstFieldType.get()).build(), "map<" + type + ">");
+                return typesMap;
             }
-            if (isConstrainedMap && prevType != null) {
-                String type = FunctionGenerator.generateTypeSignature(importsAcceptor, prevType, context);
-                types.add("map<" + type + ">");
-            } else {
-                types.add("map<any>");
-            }
+            typesMap.put(typeBuilder.MAP_TYPE.withTypeParam(types.ANY).build(), "map<any>");
+
         } else if (typeDescriptor.typeKind() == TypeDescKind.TUPLE) {
             // Handle ambiguous list construct types []
             TupleTypeSymbol tupleType = (TupleTypeSymbol) typeDescriptor;
-            String arrayType = null;
-            TypeSymbol prevType = null;
-            TypeSymbol prevInnerType = null;
-            boolean isArrayCandidate = tupleType.restTypeDescriptor().isEmpty();
-            for (TypeSymbol memberType : tupleType.memberTypeDescriptors()) {
-                // Here we check previous member-type with current member-type for equality
-                // 1. Check type-kind is differs Tuple vs int
-                // 2. Check signature differs Tuple(int,string,int) vs Tuple(boolean, string)
-                if (prevType != null &&
-                        (prevType.typeKind() != memberType.typeKind() ||
-                                !prevType.signature().equals(memberType.signature()))) {
-                    isArrayCandidate = false;
-                }
-                if (memberType.typeKind() == TypeDescKind.TUPLE && prevInnerType == null) {
-                    // Checks inner element's type equality
-                    TupleTypeSymbol nType = (TupleTypeSymbol) memberType;
-                    boolean isSameInnerType = true;
-                    // Here we check previous inner-member-type with current inner-member-type for equality
-                    // 1. Check type-kind is differs Tuple vs int
-                    // 2. Check signature differs Tuple(int,string,int) vs Tuple(boolean, string)
-                    for (TypeSymbol innerType : nType.memberTypeDescriptors()) {
-                        if (prevInnerType != null &&
-                                (prevInnerType.typeKind() != innerType.typeKind() ||
-                                        !prevInnerType.signature().equals(innerType.signature()))) {
-                            isSameInnerType = false;
-                        }
-                        prevInnerType = innerType;
-                    }
-                    if (isSameInnerType && prevInnerType != null) {
-                        String type = FunctionGenerator.generateTypeSignature(importsAcceptor, prevInnerType, context);
-                        arrayType = type + "[]";
-                    }
-                }
-                String type = FunctionGenerator.generateTypeSignature(importsAcceptor, memberType, context);
-                prevType = memberType;
-                if (arrayType == null) {
-                    arrayType = type;
-                }
-            }
+            Optional<TypeSymbol> firstMemberType = tupleType.memberTypeDescriptors().stream().findFirst();
+            boolean isArrayCandidate = tupleType.restTypeDescriptor().isEmpty()
+                    && firstMemberType.map(first -> tupleType.memberTypeDescriptors().stream()
+                    .allMatch(typeSymbol -> typeSymbol.subtypeOf(first)
+                            || first.subtypeOf(typeSymbol))).orElse(false);
+
             // Add Array type if valid
             if (isArrayCandidate) {
-                types.add(arrayType + "[]");
+                getPossibleTypeSymbols(firstMemberType.get(), context, importsAcceptor).entrySet()
+                        .forEach(entry -> typesMap.put(typeBuilder.ARRAY_TYPE.withType(entry.getKey()).build(),
+                                entry.getValue() + "[]"));
             }
             // Add tuple type
-            types.add(FunctionGenerator.generateTypeSignature(importsAcceptor, tupleType, context));
+            typesMap.put(tupleType, FunctionGenerator.generateTypeSignature(importsAcceptor, tupleType, context));
         } else if (typeDescriptor.typeKind() == TypeDescKind.ARRAY) {
             // Handle ambiguous array element types eg. record[], json[], map[]
             ArrayTypeSymbol arrayTypeSymbol = (ArrayTypeSymbol) typeDescriptor;
-            return getPossibleTypes(arrayTypeSymbol.memberTypeDescriptor(), context, importsAcceptor).stream()
-                    .map(m -> {
-                        switch (arrayTypeSymbol.memberTypeDescriptor().typeKind()) {
-                            case UNION:
+            getPossibleTypeSymbols(arrayTypeSymbol.memberTypeDescriptor(), context, importsAcceptor).entrySet()
+                    .forEach(entry -> {
+                        ArrayTypeSymbol newArrType = typeBuilder.ARRAY_TYPE.withType(entry.getKey()).build();
+                        String signature;
+                        switch (newArrType.memberTypeDescriptor().typeKind()) {
                             case FUNCTION:
-                                return "(" + m + ")[]";
-
+                            case UNION:
+                                String typeName = FunctionGenerator.processModuleIDsInText(importsAcceptor,
+                                        newArrType.memberTypeDescriptor().signature(), context);
+                                signature = "(" + typeName + ")[]";
+                                break;
                             default:
-                                return m + "[]";
+                                signature = FunctionGenerator.processModuleIDsInText(importsAcceptor,
+                                        newArrType.signature(), context);
                         }
-                    })
-                    .collect(Collectors.toList());
+                        typesMap.put(newArrType, signature);
+                    });
         } else {
-            types.add(FunctionGenerator.generateTypeSignature(importsAcceptor, typeDescriptor, context));
+            typesMap.put(typeDescriptor,
+                    FunctionGenerator.generateTypeSignature(importsAcceptor, typeDescriptor, context));
         }
-
-        return types;
+        return typesMap;
     }
 
     /**
@@ -383,44 +383,45 @@ public class CodeActionUtil {
         String spaces = StringUtils.repeat(' ', range.getStart().getCharacter());
         String padding = LINE_SEPARATOR + LINE_SEPARATOR + spaces;
 
-        boolean hasError = CodeActionUtil.hasErrorMemberType(unionType);
+        List<TypeSymbol> errorMembers = unionType.memberTypeDescriptors().stream()
+                .filter(typeSymbol -> CommonUtil.getRawType(typeSymbol).typeKind() == TypeDescKind.ERROR)
+                .collect(Collectors.toList());
 
         List<TypeSymbol> members = new ArrayList<>(unionType.memberTypeDescriptors());
-        long errorTypesCount = unionType.memberTypeDescriptors().stream()
-                .map(CommonUtil::getRawType)
-                .filter(t -> t.typeKind() == TypeDescKind.ERROR)
-                .count();
+
         if (members.size() == 1) {
             // Skip type guard
             return edits;
         }
-        boolean transitiveBinaryUnion = unionType.memberTypeDescriptors().size() - errorTypesCount == 1;
+        boolean transitiveBinaryUnion = unionType.memberTypeDescriptors().size() - errorMembers.size() == 1;
         if (transitiveBinaryUnion) {
-            members.removeIf(s -> s.typeKind() == TypeDescKind.ERROR);
+            members.removeIf(typeSymbol -> CommonUtil.getRawType(typeSymbol).typeKind() == TypeDescKind.ERROR);
         }
-        // Check is binary union type with error type
-        if ((unionType.memberTypeDescriptors().size() == 2 || transitiveBinaryUnion) && hasError) {
+        
+        ImportsAcceptor importsAcceptor = new ImportsAcceptor(context);
+        // Check if a union type with error and one non-error type
+        if ((unionType.memberTypeDescriptors().size() == 2 || transitiveBinaryUnion) && !errorMembers.isEmpty()) {
             members.forEach(bType -> {
                 if (bType.typeKind() == TypeDescKind.NIL) {
                     // if (foo() is error) {...}
-                    String newText = generateIfElseText(varName, spaces, padding, Collections.singletonList("error"));
+                    String type = errorMembers.get(0).signature();
+                    type = FunctionGenerator.processModuleIDsInText(importsAcceptor, type, context);
+                    String newText = generateIfElseText(varName, spaces, padding, List.of(type));
                     edits.add(new TextEdit(newTextRange, newText));
                 } else {
                     // if (foo() is int) {...} else {...}
                     String type = CodeActionUtil.getPossibleType(bType, edits, context).orElseThrow();
-                    String newText = generateIfElseText(varName, spaces, padding, Collections.singletonList(type));
+                    String newText = generateIfElseText(varName, spaces, padding, List.of(type));
                     edits.add(new TextEdit(newTextRange, newText));
                 }
             });
         } else {
-            boolean addErrorTypeAtEnd;
+            boolean addErrorTypeAtEnd = false;
             List<TypeSymbol> tMembers = new ArrayList<>((unionType).memberTypeDescriptors());
-            if (errorTypesCount > 1) {
+            if (errorMembers.size() > 1) {
                 // merge all error types into generic `error` type
-                tMembers.removeIf(s -> s.typeKind() == TypeDescKind.ERROR);
+                tMembers.removeIf(typeSymbol -> CommonUtil.getRawType(typeSymbol).typeKind() == TypeDescKind.ERROR);
                 addErrorTypeAtEnd = true;
-            } else {
-                addErrorTypeAtEnd = false;
             }
             List<String> memberTypes = new ArrayList<>();
             for (TypeSymbol tMember : tMembers) {
@@ -431,6 +432,8 @@ public class CodeActionUtil {
             }
             edits.add(new TextEdit(newTextRange, generateIfElseText(varName, spaces, padding, memberTypes)));
         }
+        
+        edits.addAll(importsAcceptor.getNewImportTextEdits());
         return edits;
     }
 
@@ -512,9 +515,17 @@ public class CodeActionUtil {
             }
         }
 
+        // If we are in a method call expression and the expression part already doesn't have a brace, we have to add
+        // braces to prevent the "check" being added to the entire method call expression.
+        if (matchedNode.kind() != SyntaxKind.BRACED_EXPRESSION && 
+                matchedNode.parent().kind() == SyntaxKind.METHOD_CALL) {
+            Position endPos = PositionUtil.toPosition(matchedNode.lineRange().endLine());
+            edits.add(new TextEdit(new Range(pos, pos), "("));
+            edits.add(new TextEdit(new Range(endPos, endPos), ")"));
+        }
+
         // Add `check` expression text edit
-        Position insertPos = new Position(pos.getLine(), pos.getCharacter());
-        edits.add(new TextEdit(new Range(insertPos, insertPos), "check "));
+        edits.add(new TextEdit(new Range(pos, pos), "check "));
 
         // Add parent function return change text edits
         if (!returnText.isEmpty()) {
@@ -873,7 +884,7 @@ public class CodeActionUtil {
 
     /**
      * Returns if a new line should be appended to a new text edit at module level.
-     * 
+     *
      * @param enclosingNode Node at module level which is enclosing the cursor.
      * @return @link{Boolean} W
      */
@@ -887,5 +898,22 @@ public class CodeActionUtil {
             }
         }
         return false;
+    }
+
+    /**
+     * Add the positional rename command for the code action if the capability is supported.
+     *
+     * @param context        Code action context
+     * @param codeAction     Code action
+     * @param command Title of the command                  
+     * @param renamePosition Position of renaming symbol
+     */
+    public static void addRenamePopup(CodeActionContext context, CodeAction codeAction, String command, 
+                                      Position renamePosition) {
+        LSClientCapabilities lsClientCapabilities = context.languageServercontext().get(LSClientCapabilities.class);
+        if (lsClientCapabilities.getInitializationOptions().isPositionalRefactorRenameSupported()) {
+            codeAction.setCommand(new Command(command, CommandConstants.POSITIONAL_RENAME_COMMAND,
+                    List.of(context.fileUri(), renamePosition)));
+        }
     }
 }
